crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_stats__plain.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain projects stats
exit: 0
--- stdout ---
Projects: 1
Reachable: 1
Memories: 3
Convention: 1
Decision: 1
Hazard: 1
--- stderr ---
