crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_stats__pretty.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format pretty projects stats
exit: 0
--- stdout ---
Total Projects: 1
Reachable: 1
Total Memories: 3

By Type:
  Convention: 1
  Decision: 1
  Hazard: 1
--- stderr ---
